Revision history for Pod-To-PDF

{{$NEXT}}

0.0.13  2022-03-16T09:11:33+13:00
    - Handle 'rich-text' in headers, such as formatting, links or index entries
    - Support indexing, by appending an 'Index' section to the table
      of contents.

0.0.12  2022-03-12T08:43:40+13:00
    - Encode Link URIs to ASCII subset. As described in Cairo documentation
      https://www.cairographics.org/manual/cairo-Tags-and-Links.html#uri-link
    - Add Pod::To::Cairo::Linker - override-able base class for handling links
    - Revert organizing tagged content into sections. Use simple H1 .. Hn
      tagging is recommended in PDF Association's tagged PDF best practices.
    - Improve handling of skipped header levels in table-of-contents

0.0.11  2022-03-10T08:31:25+13:00
    - Fix potential crash in PDF::Cairo::TextChunk
    - Surround internal links with 'Reference' tags

0.0.10  2022-03-09T05:45:32+13:00
    - Organize tagged content into sections.

0.0.9  2022-03-07T13:55:04+13:00
    - Revised handling of uppercase =TITLE =AUTHOR, etc. These are
      now rendered  https://design.raku.org/S26.html#Semantic_blocks

0.0.8  2022-03-04T08:42:00+13:00
    - Handle nested named blocks as sub-sections

0.0.7  2022-03-01T12:21:34+13:00
    - Fix continued code blocks
    - Set default page size to letter (612x792 pt)

0.0.6  2022-02-28T16:34:43+13:00
    - Fix footnote positioning and pagination logic

0.0.5  2022-02-28T09:52:23+13:00
    - Add metadata method.
    - Store =TITLE =AUTHOR etc in PDF metadata.
    - Fix indentation of item lists
    - Inherit width and height attributes from surface

0.0.4  2022-02-27T06:13:12+13:00
    - Fix internal links
    - Warn, don't abort if :@fonts file is missing

0.0.3  2022-02-26T15:39:14+13:00
    - Fix rendering of =SUBTITLE and other uppercased headers
    - Parse external links to ensure that they're legal
    - Fix internal destination name generation

0.0.2  2022-02-25T13:17:10+13:00
    - Fix testing under zef install