@@ -157,7 +157,7 @@ From Raku:
     =head2 SYNOPSIS
     =code foobar.pl <options> files ...
 
-    my Cairo::Surface::PDF $pdf = pod2pdf($=pod);
+    my Cairo::Surface::PDF $pdf = pod2pdf($=pod, :pdf-file<foobar.pdf>);
     $pdf.finish();
     =end code
 =end Usage
